--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,13 +1,12 @@
-use_frameworks!
+#use_frameworks!
 
-platform :ios, '10.0'
+platform :ios, '11.0'
 
 target 'Demo_Example' do
   pod 'Demo', :path => '../'
 
   target 'Demo_Tests' do
     inherit! :search_paths
-
     
   end
 end
